@@ -1,3 +1,9 @@
+2007-09-11  Don Porter  <dgp@users.sourceforge.net>
+
+	* doc/package.n:	Restored the functioning of
+	* generic/tclPkg.c:	[package require -exact] to be compatible
+	* tests/pkg.test:	with Tcl 8.4.  [Bug 1578344].
+
 2007-09-11  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclCompCmds.c (TclCompileDictCmd-update):
